# workflow-ux

./: .gitignore  Cargo.toml  README.md  build  check
macros/: Cargo.toml
macros/src/: icons.rs  layout.rs  lib.rs  link.rs  menu.rs  module.rs  view.rs
src/: app_drawer.rs  app_menu.rs  application.rs  async_trait.rs  attributes.rs  bottom_menu.rs  control.rs  d3_menu.rs  data_field.rs  dialog.css  dialog.rs  docs.rs  dom.rs  error.rs  events.rs  form.rs  form_footer.rs  icon.rs  id.rs  image.rs  layout.rs  lib.rs  link.rs  markdown.rs  menu.rs  module.rs  pagination.css  pagination.rs  panel.rs  popup_menu.rs  prelude.rs  progress.rs  qrcode.rs  style.css  style.rs  task.rs  theme.rs  user_agent.rs  utils.rs  view.rs  (+2 more)
src/app/: layout.js  layout.rs
src/controls/: action.rs  avatar.rs  badge.rs  base_element.rs  bottom_menu.rs  builder.rs  checkbox.rs  control.rs  d3_menu.rs  element_wrapper.rs  form.rs  helper.rs  html.rs  id.rs  input.rs  layout.rs  listener.rs  markdown.rs  md.rs  mnemonic.css  mnemonic.rs  mod.rs  multiselect.rs  prelude.rs  qr.rs  radio.rs  radio_btns.rs  radios.rs  select.rs  selector.rs  stage_footer.rs  svg.rs  terminal.rs  text.rs  textarea.rs  token_select.rs  token_selector.rs
src/menu/: app_menu.rs  caption.rs  group.rs  item.rs  menu.css  mod.rs  section.rs
src/menu/types/: bottom.rs  main.rs  mod.rs  popup.rs
test/: build-wasm
