[package]
name = "workflow-ux"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-ux"
keywords = ["wasm","framework","ux"]
categories = ["wasm"]
exclude = ["/.*", "/test"]
description = """
WebComponent-based application user interface framework based on async Rust
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# workflow-core = "0.1.0"
# workflow-i18n = "0.1.0"
# workflow-log = "0.1.0"
# workflow-html = { path = "../workflow-html" }
# workflow-wasm = "0.1.0"
workflow-core = { path = "../workflow-core" }
workflow-i18n = { path = "../workflow-i18n" }
workflow-log = { path = "../workflow-log" }
workflow-html = { path = "../workflow-html" }
workflow-wasm = { path = "../workflow-wasm" }
# workflow-async-trait = { path = "../workflow-async-trait" }

workflow-ux-macros = { path = "macros" }

wasm-bindgen = { version = "0.2.79" }
wasm-bindgen-futures = "0.4.31"
serde-wasm-bindgen = "0.4"
js-sys = "0.3.56"
async-std = "1.11.0"
#async-trait = "0.1.56"
convert_case = "0.5.0"
pulldown-cmark = "0.9.2"
downcast = "0.11.0"
thiserror = "1.0"
ahash = "0.8.0"
rand = "0.7.3"
bs58 = "0.4.0"
derivative = "2.2.0"
ritehash = "0.2.0"
regex="1.6.0"
url = "2.3.1"
sha2="0.10.6"
md5="0.7.0"
paste = "1.0"
borsh = "0.9.1"
hex = "0.4.3"

[dependencies.web-sys]
version = "0.3.60"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlLinkElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlHrElement',
    'ScrollToOptions',
    'ScrollBehavior',
    'Node',
    'NodeList',
    'Window',
    'InputEvent',
    'MouseEvent',
    'ErrorEvent',
    'KeyEvent',
    'CustomEvent',
    'HtmlCollection',
    'DomTokenList',
    'SvgPathElement',
    'SvgPoint',
    'DomRect',
    'TransitionEvent',
    'MutationObserver',
    'MutationObserverInit',
    'MutationRecord',
    'Navigator',
    'Location',
    'Storage',
]
