[package]
name = "workflow-ux"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/workflow-rs/workflow-ux"
keywords = ["wasm","framework","ux"]
categories = ["wasm"]
exclude = ["/.*", "/test"]
description = """
WebComponent-based application user interface framework based on async Rust
"""

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
# workflow-core = "0.1.0"
# workflow-i18n = "0.1.0"
# workflow-log = "0.1.0"
# workflow-html = { path = "../workflow-rs/html" }
# workflow-wasm = "0.1.0"
workflow-core = { path = "../workflow-rs/core"}
workflow-i18n = { path = "../workflow-rs/i18n" }
workflow-log = { path = "../workflow-rs/log" }
workflow-html = { path = "../workflow-rs/html" }
workflow-wasm = { path = "../workflow-rs/wasm" }
workflow-dom = { path = "../workflow-rs/dom" }
workflow-async-trait = {path = "../workflow-async-trait"}
qrcodegen = "1.8.0"

workflow-ux-macros = { path = "macros" }

#async-trait = "0.1.56"
ahash = "0.8.3"
async-std = "1.12.0"
borsh = "0.10.0"
bs58 = "0.4.0"
convert_case = "0.6.0"
derivative = "2.2.0"
downcast = "0.11.0"
hex = "0.4.3"
js-sys = "0.3.61"
md5="0.7.0"
paste = "1.0.11"
pulldown-cmark = "0.9.2"
rand = "0.8.5"
regex="1.7.1"
ritehash = "0.2.0"
serde-wasm-bindgen = "0.4.5"
sha2="0.10.6"
thiserror = "1.0.38"
url = "2.3.1"
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = "0.4.34"

[dependencies.web-sys]
version = "0.3.61"
features = [
    'console',
    'Document',
    'Element',
    'HtmlElement',
    'HtmlLinkElement',
    'HtmlImageElement',
    'HtmlInputElement',
    'HtmlHrElement',
    'ScrollToOptions',
    'ScrollBehavior',
    'Node',
    'NodeList',
    'Window',
    'InputEvent',
    'MouseEvent',
    'ErrorEvent',
    'KeyEvent',
    'CustomEvent',
    'HtmlCollection',
    'DomTokenList',
    'SvgPathElement',
    'SvgPoint',
    'DomRect',
    'TransitionEvent',
    'MutationObserver',
    'MutationObserverInit',
    'MutationRecord',
    'Navigator',
    'Location',
    'Storage',
]
