[package]
name = "workflow-ux-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
workflow-macro-tools = { path = "../../workflow-macro-tools" }
syn = {version="1.0.91",features=["full","fold","extra-traits"]}
quote = "1.0.8"
proc-macro2 = { version = "1.0.37" }
parse-variants = "0.1"
convert_case = "0.5.0"


